# sso

./: -  .gitignore  WORKSPACE  go.mod  go.sum
cmd/sso-auth/: BUILD.bazel
cmd/sso-proxy/: BUILD.bazel
internal/auth/: BUILD.bazel  authenticator_test.go  options_test.go
internal/auth/circuit/: BUILD.bazel  breaker.go
internal/auth/providers/: BUILD.bazel  google_test.go
internal/auth/providers/mocks/: BUILD.bazel  mock_admin.go
internal/auth/statik/: BUILD.bazel
internal/pkg/aead/: BUILD.bazel
internal/pkg/aead/mocks/: BUILD.bazel  mock_cipher.go
internal/pkg/groups/: BUILD.bazel
internal/pkg/groups/mocks/: BUILD.bazel  mock_cache.go
internal/pkg/logging/: BUILD.bazel
internal/pkg/options/: BUILD.bazel
internal/pkg/sessions/: BUILD.bazel
internal/pkg/sessions/mocks/: BUILD.bazel  mock_store.go
internal/pkg/singleflight/: BUILD.bazel
internal/pkg/templates/: BUILD.bazel
internal/pkg/templates/mocks/: BUILD.bazel  mock_templates.go
internal/pkg/testutil/: BUILD.bazel
internal/proxy/: BUILD.bazel  oauthproxy_test.go  options_test.go
internal/proxy/collector/: BUILD.bazel
internal/proxy/providers/: BUILD.bazel
