load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
	name = "circuit",
	srcs = ["breaker.go"],
	importpath = "github.com/buzzfeed/sso/internal/auth/circuit",
	deps = ["@com_benbjohnson_clock//:go_default_library"],
	visibility = ["//internal/auth:__subpackages__"],
)

go_test(
	name = "breaker_test",
	srcs = ["breaker_test.go"],
	embed = [":circuit"],
)
