package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
	name = "singleflight",
	srcs = ["singleflight.go"],
	importpath = "github.com/buzzfeed/sso/internal/pkg/singleflight",
)

go_test(
	name = "singleflight_test",
	srcs = ["singleflight_test.go"],
	embed = [":singleflight"],
	importpath = "github.com/buzzfeed/sso/internal/pkg/singleflight",
)
